#+TITLE: Changes in release 0.9.7

* Misc

- Improve and refactor some base modules.
- Configure some base variables, for example, =delete-by-moving-to-trash= to
  use "the system's trash can".